@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T01:11:38Z",
+  "timestamp" : "2022-05-08T08:18:29Z",
   "count_outdated" : 259,
   "uniques_outdated" : 137,
-  "count" : 275,
-  "uniques" : 150,
+  "count" : 276,
+  "uniques" : 151,
   "clones" : [
     {
       "timestamp": "2022-04-24T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 0, 9 ],
       "uniques": 6,
       "uniques_minmax": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
