@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 8,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 9,
       "uniques": 6
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
